tests/snapshots/edit__flake_edit_list@one_level_nesting_flat_not_a_flake.snap
---
source: tests/edit.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  also-not-a-flake:
    id: also-not-a-flake
    url: "github:a-kenji/also-not-a-flake"
    flake: false
  crane:
    id: crane
    url: "github:ipetkov/crane"
    flake: true
  flake-utelinos:
    id: flake-utelinos
    url: "github:numtide/flake-utils"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:nixos/nixpkgs/nixos-unstable"
    flake: true
  not-a-flake:
    id: not-a-flake
    url: "github:a-kenji/not-a-flake"
    flake: false
  rust-overlay:
    id: rust-overlay
    url: "github:oxalica/rust-overlay"
    flake: true
follows:
  - parent: crane
    nested: flake-utils
    target: flake-utils
    kind: indirect
  - parent: crane
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
  - parent: crane
    nested: rust-overlay
    target: rust-overlay
    kind: indirect
  - parent: rust-overlay
    nested: flake-utils
    target: flake-utils
    kind: indirect
  - parent: rust-overlay
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
