tests/snapshots/edit__flake_edit_list@stale_lockfile_only.snap
---
source: tests/edit.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  foo:
    id: foo
    url: "github:example/foo"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:NixOS/nixpkgs/nixos-unstable"
    flake: true
follows:
  - parent: foo
    nested: bar
    target: nixpkgs
    kind: indirect
  - parent: foo
    nested: baz
    target: nixpkgs
    kind: indirect
