tests/snapshots/edit__flat_nested_flat_change_url.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Change:
        id: nixpkgs
        uri: "github:nixos/nixpkgs/nixos-24.05"
        ref_or_rev: ~
---
{
  description = "flat nested flat test";

  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
  inputs.flake-utils.url = "github:numtide/flake-utils/master";
  inputs.poetry2nix = {
    inputs.flake-utils.follows = "flake-utils";
    inputs.nixpkgs.follows = "nixpkgs";
    url = "github:nix-community/poetry2nix/master";
  };

  outputs =
    {
      self,
      nixpkgs,
      flake-utils,
      poetry2nix,
    }:
    { };
}
