tests/snapshots/edit__list.snap
---
source: tests/edit.rs
expression: flake_edit.curr_list()
info:
  flake_nix: ""
  changes: []
---
naersk:
  id: naersk
  flake: true
  url: "\"github:nix-community/naersk/master\""
  follows:
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
